# libvtxml

./: Makefile  Makefile.in  README.markdown  README.md  config.h  config.h.in  config.status  configure  configure.ac  configure.scan
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  hash.c  hash.h  hl.h  list.c  list.h  mem.c  mem.h  types.h  xml.c  xml.h
src/.deps/: hash.Po  list.Po  xml.Po
